Bug 78452 - CSSPageRule should inherit from CSSRule instead of CSSStyleRule
Summary: CSSPageRule should inherit from CSSRule instead of CSSStyleRule
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks: 77745
  Show dependency treegraph
 
Reported: 2012-02-12 19:45 PST by Antti Koivisto
Modified: 2012-04-11 20:53 PDT (History)
3 users (show)

See Also:


Attachments
patch (13.34 KB, patch)
2012-02-12 19:57 PST, Antti Koivisto
andersca: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Antti Koivisto 2012-02-12 19:45:28 PST
This matches CSSOM and eliminates the only subclass of CSSStyleRule, enabling further refactoring.
Comment 1 Antti Koivisto 2012-02-12 19:57:39 PST
Created attachment 126703 [details]
patch
Comment 2 Antti Koivisto 2012-02-12 21:19:18 PST
http://trac.webkit.org/changeset/107526