Source/WebCore/css/CSSPageRule.cpp
@@ -1,7 +1,7 @@
 /*
  * (C) 1999-2003 Lars Knoll (knoll@kde.org)
  * (C) 2002-2003 Dirk Mueller (mueller@kde.org)
- * Copyright (C) 2002, 2005, 2006, 2008 Apple Inc. All rights reserved.
+ * Copyright (C) 2002, 2005, 2006, 2008, 2012 Apple Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or
  * modify it under the terms of the GNU Library General Public
@@ -22,26 +22,65 @@
 #include "config.h"
 #include "CSSPageRule.h"
 
+#include "CSSParser.h"
+#include "CSSSelector.h"
+#include "Document.h"
 #include "StylePropertySet.h"
 #include <wtf/Vector.h>
 
 namespace WebCore {
 
 CSSPageRule::CSSPageRule(CSSStyleSheet* parent, int sourceLine)
-    : CSSStyleRule(parent, sourceLine, CSSRule::PAGE_RULE)
+    : CSSRule(parent, CSSRule::PAGE_RULE)
+{
+    setSourceLine(sourceLine);
+}
+
+CSSPageRule::~CSSPageRule()
 {
 }
 
-String CSSPageRule::pageSelectorText() const
+String CSSPageRule::selectorText() const
 {
     String text = "@page";
-    CSSSelector* selector = selectorList().first();
+    const CSSSelector* selector = this->selector();
     if (selector) {
         String pageSpecification = selector->selectorText();
         if (!pageSpecification.isEmpty() && pageSpecification != starAtom)
             text += " " + pageSpecification;
     }
     return text;
+}
+
+void CSSPageRule::setSelectorText(const String& selectorText)
+{
+    Document* doc = 0;
+    if (CSSStyleSheet* styleSheet = parentStyleSheet())
+        doc = styleSheet->findDocument();
+    if (!doc)
+        return;
+    
+    CSSParser p;
+    CSSSelectorList selectorList;
+    p.parseSelector(selectorText, doc, selectorList);
+    if (!selectorList.first())
+        return;
+    
+    String oldSelectorText = this->selectorText();
+    m_selectorList.adopt(selectorList);
+    
+    if (this->selectorText() == oldSelectorText)
+        return;
+    doc->styleSelectorChanged(DeferRecalcStyle);
+}
+
+String CSSPageRule::cssText() const
+{
+    String result = selectorText();
+    result += " { ";
+    result += m_style->asText();
+    result += "}";
+    return result;
 }
 
 } // namespace WebCore
