Source/WebCore/css/CSSRule.cpp
@@ -54,8 +54,9 @@ String CSSRule::cssText() const
     case UNKNOWN_RULE:
         return String();
     case STYLE_RULE:
-    case PAGE_RULE:
         return static_cast<const CSSStyleRule*>(this)->cssText();
+    case PAGE_RULE:
+        return static_cast<const CSSPageRule*>(this)->cssText();
     case CHARSET_RULE:
         return static_cast<const CSSCharsetRule*>(this)->cssText();
     case IMPORT_RULE:
